Fix spacing of about text

--- a/src/components/about-us/AboutUs.module.scss
+++ b/src/components/about-us/AboutUs.module.scss
@@ -25,8 +25,7 @@
     }
     
     .biografia {
-        margin: 3rem 2rem 1rem 2rem;
-        min-width: 280px;
+        margin: 3rem 3rem 1rem 3rem;
         max-width: 700px;
     }
     
